# inference

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_COMPLETE.txt  QUICKSTART.md  QUICKSTART_ADVANCED.md  README.md  SCRIPTS_README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh  start_pipeline.sh  stop.sh  test_output.txt
.claude/: CLAUDE.md
.gemini/: GEMINI.md  settings.json
.hypothesis/constants/: 1ff8fd28dcb0456b  525ff72287efcc25  59f92c23f659f75d  8910ee7d68dfff68  ab8e2677a2db6619  b87495d3b7e72178  baf412d2af935a50  c3114eed3b9cd216
.hypothesis/examples/04e6b3400353b141/: 921bfaba2196037a
config/: 01_embedding_v2.yaml  01_embedding_v2_modular.yaml  02_retrieval_v2.yaml  02_retrieval_v2_modular.yaml  03_reranking_v2.yaml  03_reranking_v2_modular.yaml  04_compression_v2.yaml  04_compression_v2_modular.yaml  05_generation_v2.yaml  05_generation_v2_modular.yaml  06_evaluation.yaml  global.yaml  synchrogithub.yaml
config/old/: 01_embedding.yaml  02_retrieval.yaml  03_reranking.yaml  04_compression.yaml  04_generation.yaml  05_generation.yaml
docs/: CONFIG_VS_CODE_VERIFICATION.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_SUMMARY.md  PHASE01_V2_ANALYSIS.md  PHASE02_V2_ANALYSIS.md  PHASE03_V2_ANALYSIS.md  PHASE04_V2_ANALYSIS.md  PHASE05_V2_ANALYSIS.md  YOLO_MODE_COMPLETE.md  YOLO_MODE_IMPLEMENTATION.md  api.rst  conf.py  index.rst
docs/configs/: 01_embedding_v2.rst  01_embedding_v2_modular.rst  02_retrieval_v2.rst  02_retrieval_v2_modular.rst  03_reranking_v2.rst  03_reranking_v2_modular.rst  04_compression_v2.rst  04_compression_v2_modular.rst  05_generation_v2.rst  05_generation_v2_modular.rst  06_evaluation.rst  global.rst  old_01_embedding.rst  old_02_retrieval.rst  old_03_reranking.rst  old_04_compression.rst  old_04_generation.rst  old_05_generation.rst  synchrogithub.rst
docs/modules/: config_loader.rst  step_01_embedding.rst  step_01_embedding_generation.rst  step_02_retrieval.rst  step_03_reranking.rst  step_04_compression.rst  step_05_evaluation.rst  step_05_generation.rst
evaluations/: metrics.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css
frontend/src/components/: ChatInterface.tsx  MessageBubble.tsx  SettingsPanel.tsx
inference_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pipelines/: docker-compose.yml  rag_pipeline.py  requirements.txt
src/api/: __init__.py  main.py  models.py
src/api/routes/: chat.py
src/inference_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/inference_project/steps/: step_01_embedding.py  step_01_embedding_generation.py  step_02_retrieval.py  step_03_reranking.py  step_04_compression.py  step_05_generation.py
src/inference_project/utils/: config_loader.py
tests/: conftest.py  test_property_based.py  test_rag_pipeline.py  test_step_01_embedding.py  test_step_01_embedding_generation.py  test_step_02_retrieval.py  test_step_03_reranking.py  test_step_04_compression.py  test_steps.py
